--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+ 
   "name": "cancareservices",
   "version": "0.1.0",
   "private": true,
@@ -14,20 +15,25 @@
     "bootstrap": "^5.3.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "ejs": "^3.1.9",
     "express": "^4.18.3",
     "express-session": "^1.18.0",
+    "jest": "^27.5.1",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "mongoose": "^8.2.1",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
-    "react-datepicker": "^6.6.0",
+    "react-datepicker ": "^6.6.0",
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "supertest": "^6.3.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
